# url-shortener

./: Dockerfile  LICENSE  README.md  app.py  config.py  container.py  contributing.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  views.py
.github/workflows/: pylint.yml
config/: config.yml
models/: base.py  url.py
repositories/: url.py
services/: url.py
shortener/: __init__.py  app.py  config.py  container.py  views.py
shortener/cache/: client.py  container.py
shortener/models/: base.py  url.py
shortener/repositories/: url.py  user.py
shortener/services/: url.py  user.py
shortener/templates/: base.html  shorten.html
