[tool.poetry]
name = "urlshort"
version = "0.1.0"
description = ""
authors = ["d.smirnov <d.smirnov+github@sxope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.31"
dependency-injector = "^4.41.0"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]