[tool.poetry]
name = "urlshort"
version = "0.1.0"
description = ""
authors = ["d.smirnov <d.smirnov+github@sxope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.31"
dependency-injector = "^4.41.0"
ruff = "^0.5.5"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pydevd-pycharm = "^241.14024.28"
pylint = "^3.1.0"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0103", # invalid-name
#    "C0114", # missing-module-docstring
#    "C0115", # missing-class-docstring
#    "C0116", # missing-function-docstring
    "R0801", # Similar lines in 2 files
    "R0903", # too-few-public-methods
    "W0511", # fixme
    "W1203", # logging-fstring-interpolation
]

[tool.pylint."FORMAT"]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]